--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                     <div class="drop-zone-icon">&#x1F4C4;</div>
                     <div class="drop-zone-text">Drag & drop audio file</div>
                     <div class="drop-zone-hint">or click to browse</div>
-                    <input type="file" id="audioFile" name="audio" accept="audio/*,.opus" class="file-input" required>
+                    <input type="file" id="audioFile" name="audio" accept="audio/*,.opus" class="file-input">
                 </div>
             </div>
         </div>
