--- a/templates/history.html
+++ b/templates/history.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}History - VoiceNotes AI{% endblock %}
+{% block title %}History - NoteFlow AI{% endblock %}
 
 {% block content %}
 <div class="result-section">
